Fix issues with error responses failing to report back